# ptech_dns

./: Cargo.toml
src/: commands.rs  domains.rs  entry.rs  main.rs  proc_info.rs  rutas.rs  service.rs  ubuntu_srv.rs
